--- a/style.css
+++ b/style.css
@@ -1,24 +1,29 @@
 body {
     background-color: #ffe4f8;
+    max-width: 70vw;
+    position: relative;
+    left: 15vw;
 }
 
 #bg-element {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 #title-element {
     display: flex;
     flex-direction: column;
-    width: 600px;
+    width: 60vw;
     background-color: white;
     border: 2px solid black;
     border-radius: 7px 7px 0px 0px;
     margin-bottom: 0px;
     align-items: center;
     justify-content: center;
-    box-shadow: 10px 10px 0px 0px black;
+    box-shadow: 2px 2px 2px black;
+    margin: 10vh 0 0 0;
 }
 
 #title {
@@ -33,7 +38,7 @@ body {
 
 #roundname {
     display: flex;
-    width: 600px;
+    width: 60vw;
     height: 150px;
     font-family: 'Courier New', Courier, monospace;
     font-size: 50pt;
@@ -45,7 +50,7 @@ body {
     margin-bottom: 30px;
     align-items: center;
     justify-content: center;
-    box-shadow: 10px 10px 0px 0px black;
+    box-shadow: 2px 2px 2px black;
 }
 
 #context {
@@ -55,10 +60,10 @@ body {
 }
 
 #output {
-    width: 800px;
+    width: 100%;
     display: flex;
-    justify-content: space-between;
-    
+    justify-content: space-around;
+    margin-top: 5vh;
 }
 
 button { 
@@ -77,12 +82,12 @@ button {
 
 button:hover {
     background-color: #efbadd;
-    transform: translateY(-5px);
 }
 
 button:active {
     background-color: hotpink;
-    transform: translateY(0);
+    transform: translateY(10px) translateX(10px);
+    box-shadow: inset 5px 5px 5px black;
 }
 
 h1 {
@@ -131,13 +136,13 @@ h2 {
 #scoreboard {
     display: flex;
     align-items: center;
-    height: 150px;
-    width: 500px;
+    height: 15vh;
+    width: 60vw;
     justify-content: space-between;
 }
 
 #yourscore {
-    width: 200px;
+    width: 20vw;
     height: 90px;
     background-color: white;
     border: 2px solid black;
@@ -148,7 +153,7 @@ h2 {
 }
 
 #computerscore {
-    width: 200px;
+    width: 20vw;
     height: 90px;
     background-color: white;
     border: 2px solid black;
@@ -156,8 +161,9 @@ h2 {
     align-items: center;
     justify-content: center;
     font-family: 'Courier New', Courier, monospace;
-    font-size: 25pt;
+    font-size: 2rem;
     text-align: center;
+    word-wrap: break-word;
 }
 
 #vs {
